<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedscrollview_step"
        style="@style/NestedScrollViewStep">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/simpleexoplayerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:resize_mode="fixed_width" />


            <ImageView
                android:id="@+id/imageview_step"
                style="@style/ImageViewStyle"
                />

            <TextView
                android:id="@+id/textview_step_description"
                style="@style/WrapContentStyle"
                android:layout_margin="8dp" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_step"
        style="@style/WrapContentVertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        style="@style/ConstraintCenterX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_step"

        >

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_prev"
            style="@style/CardViewStyle"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/button_prev"
                style="@style/MatchParentStyle"
                android:text="@string/btn_prev" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_next"
            style="@style/CardViewStyle"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/button_next"
                style="@style/MatchParentStyle"
                android:text="@string/btn_next" />

        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>