<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.k2udacity.baking.ui.activity.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textview_no_internet"
        style="@style/WrapContentConstraintCenterXTitle"
        android:layout_centerInParent="true"
        android:layout_margin="40dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_refresh"
        style="@style/ConstraintCenterWrapContent"
        android:layout_below="@+id/textview_no_internet"
        android:layout_margin="40dp"
        android:text="@string/refresh"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressbar_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</android.support.constraint.ConstraintLayout>
