...
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textview_steps_header" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_steps"
            style="@style/ConstraintCenterX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_text"
            app:layout_constraintTop_toBottomOf="@+id/textview_helping_message" />

...
